--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ koin = "3.4.1"
 material3Android = "1.3.1"
 protoliteWellKnownTypes = "18.0.1"
 coreKtx = "1.9.0"
+picasso = "2.8"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -44,6 +45,7 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
 protolite-well-known-types = { group = "com.google.firebase", name = "protolite-well-known-types", version.ref = "protoliteWellKnownTypes" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+picasso = { group = "com.squareup.picasso", name = "picasso", version.ref = "picasso" }
 
 
 [plugins]
